2004-08-19  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.model.epanet.returnfieldlists: correctly returning
	fields for patterns (fixes bug #1010840)
	* dcwatdesextension.make: version number is 2.10+cvs
	
2004-07-13  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* build.xml: added build file for source zip
	* doc/build.xml: Fixed default target; formatting
	* dcwatdes.help.openchm: added new function to open Help file
	* dcwatdesextension.make: updated for 2.10 release
	
2004-07-12  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/figure/virtual-line-validity.png:
	* doc/en/figure/virtual-line-creation.png:
	* doc/en/bitcoding-zones.png:
	* doc/build.xml:
	* doc/docbook.css:
	* doc/docbook_html.xsl:
	* doc/docbook_htmlhelp.xsl:
	* doc/docbook_pdf.xsl:
	* doc/en/dcwaterdesign.xml: more work on DocBook documentation; updated
	for 2.10 release

2004-07-11  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* doc/en/dcwaterdesign.xml: started shifting documentation to DocBook
	
2004-07-08  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.model.epanet.writeinpfile:
	* doc/av_epanet_data_model.dia: dropping support for power_kw field
	of pumps as this is dangerous (fixes bug #986213)

2004-06-18  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.model.epanet.writeinpfile:
	* dcwatdes.dialog.epanettables.btnok.click:
	* dcwatdes.dialog.epanettables.initialize
	* dialogs/dcwatdes.dialog.tables.ded:
	* installer/dcwatdes/xml2net.xsl: using dc_x and dc_y instead of
	x and y; harmonized setting storage, inp output and table dialog
	for patterns (fixes pattern export bug #947865)
	* dcwatdesextension.make: version number is 2.09+cvs now
	
2004-04-22  Steffen Macke <Steffen_Macke@dorsch.com.jo>

	* dcwatdes.model.epanet.loadresultsforstep: The result import only
	worked only partially as only some records were selected during
	the process; fixes bug #541859
	* dcwatdes.view.digitizepipe: using "l" instead of "p" to prepend